# controllers/category.go
@@ -2,11 +2,10 @@ package controllers
 
 import (
 	"encoding/json"
-	"errors"
 	"shop-api/services"
 	"shop-api/types"
+	"shop-api/utils"
 	"strconv"
-	"strings"
 
 	"github.com/astaxie/beego"
 )
@@ -30,18 +29,18 @@ func (c *CategoryController) URLMapping() {
 // @Title Post
 // @Description create Category
 // @Param	body		body 	types.InputAddCategory	true		"body for Category content"
-// @Success 201 {int} models.Category
+// @Success 201 {int}
 // @Failure 403 {int} body is empty
 // @Failure 400 {int} Bad Request
 // @router / [post]
 func (c *CategoryController) Post() {
 	var v types.InputAddCategory
 	json.Unmarshal(c.Ctx.Input.RequestBody, &v)
-	if responseCode, err := c.CategoryService.Add(&v); err == nil {
-		c.Ctx.Output.SetStatus(responseCode)
-		c.Data["json"] = v
+	responseCode, id, err := c.CategoryService.Add(&v)
+	c.Ctx.Output.SetStatus(responseCode)
+	if err == nil {
+		c.Data["json"] = id
 	} else {
-		c.Ctx.Output.SetStatus(responseCode)
 		c.Data["json"] = err.Error()
 	}
 	c.ServeJSON()
@@ -55,7 +54,7 @@ type response struct {
 // @Title Get One
 // @Description get Category by id
 // @Param	id		path 	string	true		"The key for staticblock"
-// @Success 200 {object} models.Category
+// @Success 200 {object} types.OutputCategory
 // @Failure 403 :id is empty
 // @router /:id [get]
 func (c *CategoryController) GetOne() {
@@ -75,26 +74,17 @@ func (c *CategoryController) GetOne() {
 // @Title Get All
 // @Description get Category
 // @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
-// @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
 // @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
 // @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
 // @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
 // @Param	offset	query	string	false	"Start position of result set. Must be an integer"
-// @Success 200 {object} models.Category
-// @Failure 403
+// @Success 200 {object} types.OutputCategory
+// @Failure 403 {string} string
+// @Header 403 {string} string
 // @router / [get]
 func (c *CategoryController) GetAll() {
-	var fields []string
-	var sortby []string
-	var order []string
-	var query = make(map[string]string)
 	var limit int64 = 10
 	var offset int64
-
-	// fields: col1,col2,entity.col3
-	if v := c.GetString("fields"); v != "" {
-		fields = strings.Split(v, ",")
-	}
 	// limit: 10 (default is 10)
 	if v, err := c.GetInt64("limit"); err == nil {
 		limit = v
@@ -103,29 +93,28 @@ func (c *CategoryController) GetAll() {
 	if v, err := c.GetInt64("offset"); err == nil {
 		offset = v
 	}
-	// sortby: col1,col2
-	if v := c.GetString("sortby"); v != "" {
-		sortby = strings.Split(v, ",")
-	}
-	// order: desc,asc
-	if v := c.GetString("order"); v != "" {
-		order = strings.Split(v, ",")
-	}
-	// query: k:v,k:v
-	if v := c.GetString("query"); v != "" {
-		for _, cond := range strings.Split(v, ",") {
-			kv := strings.SplitN(cond, ":", 2)
-			if len(kv) != 2 {
-				c.Data["json"] = errors.New("Error: invalid query key/value pair")
-				c.ServeJSON()
-				return
-			}
-			k, v := kv[0], kv[1]
-			query[k] = v
-		}
-	}
 
-	responseCode, results, err := c.CategoryService.GetAll(query, fields, sortby, order, offset, limit)
+	queryString := c.GetString("query")
+	query, err := utils.TransformQueryGetAll(queryString)
+	if err != nil {
+		c.Data["json"] = err.Error()
+		c.Ctx.Output.SetStatus(types.ResponseCode["Forbidden"])
+		c.ServeJSON()
+		return
+	}
+	// sortby: col1,col2
+	sortbyString := c.GetString("sortby")
+	// order: desc,asc
+	orderString := c.GetString("order")
+	// query: k:v,k:v
+	order, err := utils.TransFormSortFieldOrderGetAll(sortbyString, orderString)
+	if err != nil {
+		c.Data["json"] = err.Error()
+		c.Ctx.Output.SetStatus(types.ResponseCode["Forbidden"])
+		c.ServeJSON()
+		return
+	}
+	responseCode, results, err := c.CategoryService.GetAll(query, order, offset, limit)
 	c.Ctx.Output.SetStatus(responseCode)
 	if err != nil {
 		c.Data["json"] = err.Error()
