# controllers/product.go
@@ -2,12 +2,10 @@ package controllers
 
 import (
 	"encoding/json"
-	"errors"
-	"fmt"
 	"shop-api/services"
 	"shop-api/types"
+	"shop-api/utils"
 	"strconv"
-	"strings"
 
 	"github.com/astaxie/beego"
 )
@@ -31,7 +29,7 @@ func (c *ProductController) URLMapping() {
 // @Title Post
 // @Description create Product
 // @Param	body		body 	types.InputAddProduct	true		"body for Product content"
-// @Success 201 {int} models.Product
+// @Success 201 {int}
 // @Failure 403 body is empty
 // @router / [post]
 func (c *ProductController) Post() {
@@ -51,7 +49,7 @@ func (c *ProductController) Post() {
 // @Title Get One
 // @Description get Product by id
 // @Param	id		path 	string	true		"The key for staticblock"
-// @Success 200 {object} models.Product
+// @Success 200 {object} types.OutputProduct
 // @Failure 403 :id is empty
 // @router /:id [get]
 func (c *ProductController) GetOne() {
@@ -71,29 +69,16 @@ func (c *ProductController) GetOne() {
 // @Title Get All
 // @Description get Product
 // @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
-// @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
 // @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
 // @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
 // @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
 // @Param	offset	query	string	false	"Start position of result set. Must be an integer"
-// @Success 200 {object} models.Product
+// @Success 200 {object} types.OutputProduct
 // @Failure 403
 // @router / [get]
 func (c *ProductController) GetAll() {
-	var fields []string
-	var sortby []string
-	var order []string
-	var query = make(map[string]string)
 	var limit int64 = 10
 	var offset int64
-
-	// r, _ := models.GetWithCat()
-	// fmt.Println("r", r)
-	// fields: col1,col2,entity.col3
-	if v := c.GetString("fields"); v != "" {
-		fields = strings.Split(v, ",")
-	}
-	fmt.Println("fields", fields)
 	// limit: 10 (default is 10)
 	if v, err := c.GetInt64("limit"); err == nil {
 		limit = v
@@ -102,29 +87,27 @@ func (c *ProductController) GetAll() {
 	if v, err := c.GetInt64("offset"); err == nil {
 		offset = v
 	}
+	queryString := c.GetString("query")
+	query, err := utils.TransformQueryGetAll(queryString)
+	if err != nil {
+		c.Data["json"] = err.Error()
+		c.Ctx.Output.SetStatus(types.ResponseCode["Forbidden"])
+		c.ServeJSON()
+		return
+	}
 	// sortby: col1,col2
-	if v := c.GetString("sortby"); v != "" {
-		sortby = strings.Split(v, ",")
-	}
+	sortbyString := c.GetString("sortby")
 	// order: desc,asc
-	if v := c.GetString("order"); v != "" {
-		order = strings.Split(v, ",")
-	}
+	orderString := c.GetString("order")
 	// query: k:v,k:v
-	if v := c.GetString("query"); v != "" {
-		for _, cond := range strings.Split(v, ",") {
-			kv := strings.SplitN(cond, ":", 2)
-			if len(kv) != 2 {
-				c.Data["json"] = errors.New("Error: invalid query key/value pair")
-				c.ServeJSON()
-				return
-			}
-			k, v := kv[0], kv[1]
-			query[k] = v
-		}
+	order, err := utils.TransFormSortFieldOrderGetAll(sortbyString, orderString)
+	if err != nil {
+		c.Data["json"] = err.Error()
+		c.Ctx.Output.SetStatus(types.ResponseCode["Forbidden"])
+		c.ServeJSON()
+		return
 	}
-
-	responseCode, results, err := c.ProductService.GetAll(query, fields, sortby, order, offset, limit)
+	responseCode, results, err := c.ProductService.GetAll(query, order, offset, limit)
 	c.Ctx.Output.SetStatus(responseCode)
 	if err != nil {
 		c.Data["json"] = err.Error()
