# swagger/swagger.yml
@@ -2,8 +2,10 @@ swagger: "2.0"
 info:
   title: Shop API
   description: documents for Shop API
-  version: 1.0.0
+  version: 1.0.1
 basePath: /v1
+schemes:
+- http
 paths:
   /category/:
     get:
@@ -15,10 +17,6 @@ paths:
       - in: query
         name: query
         description: Filter. e.g. col1:v1,col2:v2 ...
-        type: string
-      - in: query
-        name: fields
-        description: Fields returned. e.g. col1,col2 ...
         type: string
       - in: query
         name: sortby
@@ -41,9 +39,9 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Category'
+            $ref: '#/definitions/types.OutputCategory'
         "403":
-          description: ""
+          description: '{string} string'
     post:
       tags:
       - category
@@ -58,7 +56,7 @@ paths:
           $ref: '#/definitions/types.InputAddCategory'
       responses:
         "201":
-          description: '{int} models.Category'
+          description: '{int}'
         "400":
           description: '{int} Bad Request'
         "403":
@@ -79,7 +77,7 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Category'
+            $ref: '#/definitions/types.OutputCategory'
         "403":
           description: :id is empty
     put:
@@ -134,10 +132,6 @@ paths:
         description: Filter. e.g. col1:v1,col2:v2 ...
         type: string
       - in: query
-        name: fields
-        description: Fields returned. e.g. col1,col2 ...
-        type: string
-      - in: query
         name: sortby
         description: Sorted-by fields. e.g. col1,col2 ...
         type: string
@@ -158,7 +152,7 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Product'
+            $ref: '#/definitions/types.OutputProduct'
         "403":
           description: ""
     post:
@@ -175,7 +169,7 @@ paths:
           $ref: '#/definitions/types.InputAddProduct'
       responses:
         "201":
-          description: '{int} models.Product'
+          description: '{int}'
         "403":
           description: body is empty
   /product/{id}:
@@ -194,7 +188,7 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Product'
+            $ref: '#/definitions/types.OutputProduct'
         "403":
           description: :id is empty
     put:
@@ -344,6 +338,45 @@ definitions:
         format: double
       detail:
         type: string
+      model:
+        type: string
+      name:
+        type: string
+      price:
+        type: number
+        format: double
+      quantity:
+        type: integer
+        format: int64
+  types.OutputCategory:
+    title: OutputCategory
+    type: object
+    properties:
+      detail:
+        type: string
+      id:
+        type: integer
+        format: int64
+      name:
+        type: string
+      status:
+        type: string
+  types.OutputProduct:
+    title: OutputProduct
+    type: object
+    properties:
+      Category:
+        $ref: '#/definitions/types.OutputCategory'
+      brand:
+        type: string
+      cost:
+        type: number
+        format: double
+      detail:
+        type: string
+      id:
+        type: integer
+        format: int64
       model:
         type: string
       name:
